@@ -1,3 +1,0 @@
-#!/bin/sh
-DIR="$( cd "$( dirname "$0" )" && pwd )"
-php $DIR/../listeners/navSyncBroadcasterServer.php
